Support case where hf model id is not supplied but model artifacts are in model dir